commit all the changes

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container{
+  border-radius: 10px;
+  box-shadow: inset;
+  text-align: center;
 }
